# Roomba

./: .gitignore  README.md  __main__.py  credentials.json  gmail.py  keywords.txt  main.py  pyproject.toml  requirements.txt  test.py  token.pickle
Roomba.egg-info/: PKG-INFO  SOURCES.txt
