[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Roomba"
version = "0.0.1"
authors = [
  { name="Anrid239" },
  { name="Ananthan831" },
  { name="LenOfAl" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LenOfAl/Roomba"
"Bug Tracker" = "https://github.com/LenOfAl/Roomba/issues"